# parcelec

./: .gitignore  Procfile  README.md  api-ci.yml  docker-stack.yaml  package.json  workspace.code-workspace
.github/: dependabot.yml
.github/workflows/: api-tests.yaml  api_integration_tests.yml  api_tests.yml  app.yaml  build_prod_image.yml  cd.yaml  ci.yaml  server_unit_tests.yml  test.yml
adr/: 20250203-mvp.md  20250302-post-mvp.md  20250413-forecast.md
api/: .eslintrc.js  .gitignore  .pylintrc  Makefile  README.rst  package-lock.json  package.json  pyproject.toml  tsconfig.json
api/parcelec/domain/spot/: types.py
api/src/domain/spot/: index.ts  tmp.py
api/test/: example.test.ts
api/test/spot/: spot.test.ts
api/tests/: test_dummy.py
app/: Cargo.toml  Dockerfile  docker-stack.yaml
app/.cargo/: config.toml  config.toml.local
app/src/: constants.rs  game.rs  lib.rs  main.rs  market.rs  offers.rs  order_book.rs  player.rs
app/src/api/: create_game.rs  join_game.rs  list_games.rs  mod.rs  state.rs  tutorial.rs  ws.rs
app/src/bots/: initial_orders.rs  mod.rs
app/src/forecast/: mod.rs
app/src/game/: actor.rs  delivery_period.rs  game_repository.rs  game_service.rs  mod.rs  scores.rs
app/src/game/infra/: actor.rs  mod.rs  stack_config.rs
app/src/infra/api/: cookies.rs  create_game.rs  current_game.rs  join_game.rs  list_games.rs  mod.rs  state.rs  tutorial.rs
app/src/infra/api/ws/: connection.rs  mod.rs
app/src/market/: actor.rs  mod.rs  models.rs  order_book.rs  service.rs
app/src/market/bots/: extreme_orders.rs  initial_orders.rs  mod.rs  tutorial_initial_orders.rs
app/src/market/infra/: actor.rs  mod.rs  service.rs
app/src/models/: mod.rs
app/src/plants/: actor.rs  battery.rs  consumers.rs  gas_plant.rs  mod.rs  models.rs  renewable.rs  service.rs  stack.rs
app/src/plants/infra/: actor.rs  mod.rs  service.rs
app/src/plants/technologies/: battery.rs  consumers.rs  gas_plant.rs  mod.rs  nuclear.rs  renewable.rs  timeseries.rs  variable.rs
app/src/player/: connection.rs  mod.rs  repository.rs
app/src/player/infra/: actor.rs  mod.rs  service.rs
app/src/utils/: config.rs  mod.rs  units.rs
app/tests/: e2e.rs
app/tests/common/: mod.rs
backend/: .gitignore  Makefile  pyproject.toml
client/: .env.production  .eslintrc.js  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  svelte.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
client/.storybook/: main.ts  preview.ts
client/src/: App.svelte  App.vue  NumberInput.svelte  Options.ts  OrderBook.svelte  app.css  app.html  main.ts  message.ts
client/src/components/: AddNewOTC.vue  AllBidsGraph.vue  AuctionBid.vue  AuctionClearedPopup.vue  AuctionSalon.vue  AuctionSelect.vue  BidItem.vue  BidItemInput.vue  BidsGraphAll.vue  BidsList.vue  Bilans.vue  BilansEndGame.vue  BilansSimple.vue  Chatroom.vue  (+51 more)
resources/: pitch.md  users-stories.md
server/: .dockerignore  .eslintignore  .eslintrc  .eslintrc.js  Dockerfile  README.md  database.json  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  index.beta.ts  index.ts  jest.config.js  jest.integration.config.js  jest.unit.config.js  openapi.yaml  package-lock.json  package.json  tsconfig.json
server/db/: Dockerfile  init.sql
server/e2e/: Dockerfile  setupDB.ts
server/migrations/: 20210214091849-init.js  20210218203927-add-t-sessions.js  20210220173621-add-t-users.js  20210222181752-add-t-bids.js  20210301182948-add-t-phases.js  config.json
server/old_e2e/: db_utils_new.ts  routes_otc.spec.ts  routes_portfolio.spec.ts  routes_users.spec.ts
server/src/: di.context.ts  server.ts  types.d.ts
server/tests/: Dockerfile
(+189 files in other folders)
