[package]
name = "parcelec-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["macros", "ws"] }
chrono = { version = "0.4.42", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["from", "display", "as_ref", "into", "add", "mul", "add_assign", "not"] }
futures-util = "0.3.31"
petname = "2.0.2"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full", "test-util", "time"] }
tokio-util = "0.7.17"
tower-cookies = "0.11.0"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v4", "fast-rng"] }

[dev-dependencies]
fantoccini = "0.22.0"
futures = "0.3.31"
http-body-util = "0.1.3"
mockall = "0.14.0"
scraper = "0.24.0"
tokio-tungstenite = "0.28.0"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs"] }

[features]
e2e-tests = []
