[package]
name = "parcelec-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros", "ws"] }
chrono = { version = "0.4.43", features = ["serde"] }
derive_more = { version = "2.1.1", features = ["from", "display", "as_ref", "into", "add", "mul", "add_assign", "not"] }
futures-util = "0.3.32"
petname = "2.0.2"
rand = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full", "test-util", "time"] }
tokio-util = "0.7.18"
tower-cookies = "0.11.0"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.21.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
fantoccini = "0.22.0"
futures = "0.3.32"
http-body-util = "0.1.3"
mockall = "0.14.0"
scraper = "0.25.0"
tokio-tungstenite = "0.28.0"
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["fs"] }

[features]
e2e-tests = []
